Fixed alignment and redirect of login page

--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,10 @@ body {
   padding-top: 30px;
 }
 
+.paddingLeft85px {
+  padding-left: 85px;
+}
+
 .marginTop30px {
   margin-top: 30px;
 }
